--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
   "private": true,
   "homepage": "https://cheestick.github.io/goit-react-hw-08-phonebook/",
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.8.7",
     "@reduxjs/toolkit": "^1.8.2",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
     "nanoid": "^3.3.4",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
